# ChangeLog for sys-cluster/util-vserver
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/util-vserver/ChangeLog,v 1.9 2004/08/25 14:53:29 tantive Exp $

*util-vserver-0.29_p214 (25 Aug 2004)

  25 Aug 2004; Michael Imhof <tantive@gentoo.org> +files/vprocunhide,
  +files/vserver-build-029p214.patch, +files/vservers-conf.d,
  +files/vservers-init, +util-vserver-0.29_p214.ebuild:
  Version bumped. Closes #58770.

*util-vserver-0.30 (09 Jul 2004)

  09 Jul 2004; Michael Imhof <tantive@gentoo.org> +util-vserver-0.30.ebuild:
  Version bumped. Closes #56572.

  07 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org>
  util-vserver-0.29.ebuild:
  clean older ebuild

  12 May 2004; David Holm <dholm@gentoo.org> util-vserver-0.29.5.ebuild:
  Added to ~ppc.

*util-vserver-0.29.5 (11 May 2004)

  11 May 2004; Michael Imhof <tantive@gentoo.org> util-vserver-0.29.5.ebuild:
  Version bumped. Added inherit eutils. Closes #49006.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> util-vserver-0.29.ebuild:
  Add inherit eutils

*util-vserver-0.29_p196-r1 (25 Mar 2004)

  25 Mar 2004; Michael Imhof <tantive@gentoo.org> util-vserver-0.29_p196-r1.ebuild:
  New version. Closes #45729.

*util-vserver-0.29 (25 Mar 2004)

  25 Mar 2004; Michael Imhof <tantive@gentoo.org> util-vserver-0.29.ebuild,
  files/configure.patch:
  Initial ebuild. Submitted by Ole Tange <bugs.gentoo.org@tange.dk>. Closes
  #45053.
