@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/util-vserver
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/util-vserver/ChangeLog,v 1.9 2004/08/25 14:53:29 tantive Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/util-vserver/ChangeLog,v 1.10 2004/09/19 18:59:13 tantive Exp $
+
+  19 Sep 2004; Michael Imhof <tantive@gentoo.org> -util-vserver-0.29.5.ebuild,
+  -util-vserver-0.29_p196-r1.ebuild:
+  Cleaned out old ebuilds.
 
 *util-vserver-0.29_p214 (25 Aug 2004)
 
